--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         } else if (document.Login.testerNumber.value=="A1004" && document.Login.studentNumber.value=="624Asahi"){
                             location.href="A1004.html"
                         } else if (document.Login.testerNumber.value=="A1005" && document.Login.studentNumber.value==""){
-                            location.href="A1005.html"
+                            location.href="wait.html"
                         } else if (document.Login.testerNumber.value=="A2001" && document.Login.studentNumber.value=="Amber710"){
                             location.href="A2001.html"
                         } else if (document.Login.testerNumber.value=="A2002" && document.Login.studentNumber.value=="taihei14"){
@@ -58,9 +58,9 @@
                         } else if (document.Login.testerNumber.value=="A2003" && document.Login.studentNumber.value=="hiro1415"){
                             location.href="A2003.html"
                         } else if (document.Login.testerNumber.value=="A2004" && document.Login.studentNumber.value==""){
-                            location.href="A2004.html"
+                            location.href="wait.html"
                         } else if (document.Login.testerNumber.value=="A2005" && document.Login.studentNumber.value==""){
-                            location.href="A2005.html"
+                            location.href="wait.html"
                         } else if (document.Login.testerNumber.value=="B1001" && document.Login.studentNumber.value=="tomohiro"){
                             location.href="B1001.html"
                         } else if (document.Login.testerNumber.value=="B1002" && document.Login.studentNumber.value=="KoU58008"){
@@ -70,17 +70,17 @@
                         } else if (document.Login.testerNumber.value=="B1004" && document.Login.studentNumber.value=="MaEtAkA2"){
                             location.href="B1004.html"
                         } else if (document.Login.testerNumber.value=="B1005" && document.Login.studentNumber.value==""){
-                            location.href="B1005.html"
+                            location.href="wait.html"
                         } else if (document.Login.testerNumber.value=="B2001" && document.Login.studentNumber.value==""){
-                            location.href="B2001.html"
+                            location.href="wait.html"
                         } else if (document.Login.testerNumber.value=="B2002" && document.Login.studentNumber.value==""){
-                            location.href="B2002.html"
+                            location.href="wait.html"
                         } else if (document.Login.testerNumber.value=="B2003" && document.Login.studentNumber.value=="1107ditm"){
                             location.href="B2003.html"
                         } else if (document.Login.testerNumber.value=="B2004" && document.Login.studentNumber.value=="Syhy8810"){
                             location.href="B2004.html"
                         } else if (document.Login.testerNumber.value=="B2005" && document.Login.studentNumber.value==""){
-                            location.href="B2005.html"
+                            location.href="wait.html"
                         } else {
                             location.href="false.html"
                         }
